tests/baselines/reference/parser_continueNotInIterationStatement1.errors.txt
==== tests/cases/compiler/parser_continueNotInIterationStatement1.ts (1 errors) ====
    continue;
    ~~~~~~~~~
!!! parser_continueNotInIterationStatement1.ts(1,1): error TS1104: 'continue' statement can only be used within an enclosing iteration statement.